LU-2186 mdt: initialize pointer to lu_site

later it's used to access top device (which is MDT) and
learn number of current clients to foresee how many
sequences will be needed.

Signed-off-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Change-Id: I0f542dfbc45836180ec274dc605d3770b527e988
Reviewed-on: http://review.whamcloud.com/4280
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Mike Pershin <tappro@whamcloud.com>